Fix Timer Sync,Fix Win Rank Logic, Prevent Single Player Start

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
         <!-- Controls -->
         <div class="controls-section">
           <div id="dice-display">—</div>
+          <button id="start-btn" class="action-btn" disabled style="display:none;">START GAME</button>
           <button id="roll-btn" class="action-btn" disabled>ROLL</button>
         </div>
 
